# org/models.go
@@ -45,3 +45,36 @@ type OrgWithRole struct {
 	Slug   string `json:"slug"`
 	UserID int    `json:"userId"`
 }
+
+type OrgRequest struct {
+	UserID int `json:"-"`
+	OrgID  int `json:"-"`
+}
+
+type UserOrgRoleResponse struct {
+	UserID int    `json:"userId"`
+	OrgID  int    `json:"orgId"`
+	RoleID int    `json:"roleId"`
+	Status string `json:"status"`
+}
+
+type UserResponse struct {
+	ID           int    `json:"id"`
+	Email        string `json:"email"`
+	Username     string `json:"username"`
+	FirstName    string `json:"firstName"`
+	LastName     string `json:"lastName"`
+	Status       string `json:"status"`
+	AvatarImgKey string `json:"avatarImgKey"`
+	Active       bool   `json:"active"`
+	Phone        string `json:"phone"`
+}
+
+type OrgMembers struct {
+	UserOrgRole UserOrgRoleResponse `json:"userOrgRole"`
+	User        UserResponse        `json:"user"`
+}
+
+type OrgMembersResponse struct {
+	OrgMembers []OrgMembers `json:"orgMembers"`
+}
